z-index fixes

--- a/app/client/stylesheets/components/common/header.less
+++ b/app/client/stylesheets/components/common/header.less
@@ -15,6 +15,7 @@
   text-align: center;
   align-items: center;
   justify-content: center;
+  z-index: 1;
 
   @media (min-width: @phone-width) {
     width: @full;
