--- a/app/client/stylesheets/components/views/views.less
+++ b/app/client/stylesheets/components/views/views.less
@@ -7,7 +7,7 @@
   position: relative;
   margin-top: @fluid-quarter;
   padding: @space-base;
-  z-index: 1;
+  z-index: 2;
   background: @background-color;
 
   @media (min-width: @tablet-width) {
